CertCKAD/bai16/ns-client.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: client
  labels:
    name: client
spec: {}
status: {}
