CertCKAD/bai16/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  namespace: client
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
